# foxloader

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
app/services/: __init__.py  folder_service.py  jd_client.py  parser_service.py  queue_service.py  submission_service.py
app/ui/: pages.py
tests/: test_folder_service.py  test_jd_client.py  test_parser_service.py  test_submission_service.py
