[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nicegui-jdownloader-mvp"
version = "0.1.0"
description = "Local NiceGUI frontend for JDownloader 2 via direct local API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "nicegui>=2.0,<4.0",
  "guessit>=3.8,<4.0",
  "python-dotenv>=1.0,<2.0",
  "PyYAML>=6.0,<7.0",
  "requests>=2.32,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
downloader-app = "app.main:run"

[tool.setuptools]
packages = ["app", "app.services", "app.ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
